--- a/Content/style.css
+++ b/Content/style.css
@@ -1,4 +1,11 @@
-﻿.navbar {
+﻿html, body {
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    color: white;
+}
+
+.navbar {
     background-color: #fcd088;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
@@ -45,9 +52,6 @@ table{
 }
 
 .content {
-    /*overflow-y: scroll !important;*/
-    /*height: calc(100% - 80px);*/
-    /*display: table;*/
     width: 100%;
     flex-grow: 1;
     background-color: #242a30;
@@ -76,15 +80,13 @@ table{
     color:white;
 }
 
-
+@media (min-width: 992px) {
+    #window {
+        width: 90%;
+    }
+}
 
 #window {
-    /*-webkit-animation: fadein 1s;*/ /* Safari, Chrome and Opera > 12.1 */
-    /*-moz-animation: fadein 1s;*/ /* Firefox < 16 */
-    /*-ms-animation: fadein 1s;*/ /* Internet Explorer */
-    /*-o-animation: fadein 1s;*/ /* Opera < 12.1 */
-    /*animation: fadein 1s;*/
-    /*overflow-y: scroll !important;*/
     width: 95%;
     height: 95%;
     margin: auto;
@@ -92,11 +94,6 @@ table{
     display: flex;
     flex-direction: column;
 }
-
-/*#content-div {
-    background-color: #242a30;*/
-    /*height: 100%;*/
-/*}*/
 
 #window {
     position: absolute;
@@ -109,34 +106,6 @@ table{
     
 }
 
-/*#content-container.row {
-    display: table-cell;
-    vertical-align: middle;
-}*/
-
-#content-container {
-    /*position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    IE 9 -webkit-transform: translate(-50%, -50%);
-    Chrome, Safari, Opera*/
-    /*height: 100%;*/
-}
-
-@media (min-width: 992px) {
-    #window {
-        width: 90%;
-    }
-}
-
-html, body {
-    height: 100%;
-    width: 100%;
-    background-color: white;
-    color: white;
-}
 
 .bottom-buffer{
     margin-bottom: 20px;
@@ -199,8 +168,6 @@ html, body {
 }
 
 .buildings-container {
-    /*overflow: scroll;*/
-    /*height: 500px;*/
     height:30rem;
     width: 100%;
     white-space: nowrap;
@@ -212,7 +179,6 @@ html, body {
     color: #202529;
     display: inline-block;
     vertical-align: bottom;
-    /*min-width:20px;*/
     width: 18%;
     margin-left: 1%;
     margin-right: 1%;
