--- a/Content/style.css
+++ b/Content/style.css
@@ -61,12 +61,17 @@ table{
     background-image: url("../Images/sun-bg.svg");
     background-repeat: no-repeat;
     background-position: center;
+    
 }
 
 .content-centered {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.full-height {
+    margin: auto;
 }
 
 .customNav .nav-link.active,
@@ -167,6 +172,46 @@ table{
     max-width: 100px;
 }
 
+#reset:hover {
+    cursor: pointer;
+    transform: rotate(90deg) scale(1.2);
+    transition: transform 0.5s ease;
+}
+
+#reset:hover {
+    animation-name: in;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+#reset {
+    animation-name: out;
+    animation-duration: 0.5s;
+}
+
+@keyframes in {
+    from {
+        transform: rotate(0deg);
+        border-radius: 0px;
+    }
+
+    to {
+        border-radius: 100px;
+        transform: rotate(90deg);
+    }
+}
+
+@keyframes out {
+    from {
+        transform: rotate(90deg);
+    }
+
+    to {
+        transform: rotate(0deg);
+    }
+} 
+
+
 .buildings-container {
     height:30rem;
     width: 100%;
@@ -179,9 +224,9 @@ table{
     color: #202529;
     display: inline-block;
     vertical-align: bottom;
-    width: 18%;
+    /*width: 15%;
     margin-left: 1%;
-    margin-right: 1%;
+    margin-right: 1%;*/
 }
 
 .sun {
@@ -190,6 +235,26 @@ table{
 .no-sun {
     background-color: #8a7148;
 }
+
+.last_building, .first_building {
+    cursor: pointer;
+}
+
+.last_building h1, .first_building h1 {
+    opacity: 0;
+    transition: visibility 0s, opacity 0.5s ease;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.last_building:hover h1, .first_building:hover h1 {
+    transition: opacity 0.5s ease;
+    opacity: 1;
+}
+
 
 /*.windows {
     width: 100%;
